Modify how log textbox is created

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: base
                     <button class="btn btn-primary"><span class="glyphicon glyphicon-play"></span> Run</button>
                 </div>
             </div>
-            <textarea readonly class="form-control" rows=5 placeholder="(toolchain output)" id="tool-log"></textarea>
+            <textarea disabled class="form-control" rows=5 placeholder="(toolchain output)" id="tool-log"></textarea>
         </div>
     </div>
 </div>
