--- a/index.html
+++ b/index.html
@@ -52,16 +52,28 @@ layout: base
                             <li><a href="#">Export package</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Examples <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Hello World</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorials <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Getting Started</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <div class="navbar-right" style="margin-right: 10px; margin-top: 8px;">
                     <button class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span> Help</button>
                     <button class="btn btn-primary"><span class="glyphicon glyphicon-play"></span> Run</button>
                 </div>
             </div>
-            <textarea disabled class="form-control" rows=5 placeholder="(toolchain output)" id="tool-log"></textarea>
+            <textarea disabled class="form-control" rows=10 placeholder="(toolchain output)" id="tool-log"></textarea>
         </div>
     </div>
 </div>
 
-<script src="/scripts/main.js"></script>
+<script data-main="/scripts/main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
 <link rel="stylesheet" href="/styles/index.css" />
