--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: base
 ---
 
+<p class="text-danger" style="position: fixed; top: 0; left: 0; right: 0; width: 100%; text-align: center; font-size: 20pt;"><strong>Work In Progress</strong></p>
+
 <div class="container-fixed">
     <div class="row-xs-12">
         <div class="col col-md-7 editor-column">
