Add OpenTI to the page and start emulator bindings

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: base
                 </ul>
                 <div class="navbar-right" style="margin-right: 10px; margin-top: 8px;">
                     <button class="btn btn-default"><span class="glyphicon glyphicon-question-sign"></span> Help</button>
-                    <button class="btn btn-primary"><span class="glyphicon glyphicon-play"></span> Run</button>
+                    <button class="btn btn-primary" id="run-project"><span class="glyphicon glyphicon-play"></span> Run</button>
                 </div>
             </div>
             <textarea disabled class="form-control" rows=10 placeholder="(toolchain output)" id="tool-log"></textarea>
