--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ layout: base
                 <div class="calculator">
                     <canvas width="385" height="256" id="screen"></canvas>
                 </div>
+                <p class="alert alert-info alert-dismissable" style="margin-bottom: 0;">
+                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    Click the screen to interact with the calculator, and click away to stop.
+                </p>
             </div>
             <div class="navbar navbar-default">
                 <ul class="nav navbar-nav">
