Fix typo in blurb

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ layout: base
                     <h4>Try KnightOS!</h4>
                     <p><a href="http://www.knightos.org">KnightOS</a> is an <a href="https://github.com/KnightOS">open-source</a> operating system for
                     Texas Instruments calculators. This page lets you take a crack at writing programs for it! Write your code in on the left and hit
-                    "run" to give it a shot. You probably want to consult the <a href="http://www.knightos.org/documentation">documentation</a> before
+                    "run" to give it a shot. You'll probably want to consult the <a href="http://www.knightos.org/documentation">documentation</a> before
                     long. Have fun!</p>
             </div>
             <textarea disabled class="form-control" rows=10 placeholder="(toolchain output)" id="tool-log"></textarea>
