Needs more target="_blank"

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ layout: base
             <div class="alert alert-success alert-dismissable">
                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <h4>Try KnightOS!</h4>
-                    <p><a href="http://www.knightos.org">KnightOS</a> is an <a href="https://github.com/KnightOS">open-source</a> operating system for
+                    <p><a target="_blank" href="http://www.knightos.org">KnightOS</a> is an <a target="_blank" href="https://github.com/KnightOS">open-source</a> operating system for
                     Texas Instruments calculators. This page lets you take a crack at writing programs for it! Write your code in on the left and hit
-                    "run" to give it a shot. You'll probably want to consult the <a href="http://www.knightos.org/documentation">documentation</a> before
+                    "run" to give it a shot. You'll probably want to consult the <a target="_blank" href="http://www.knightos.org/documentation">documentation</a> before
                     long. Have fun!</p>
             </div>
             <textarea disabled class="form-control" rows=10 placeholder="(toolchain output)" id="tool-log"></textarea>
