--- a/index.html
+++ b/index.html
@@ -89,28 +89,31 @@ layout: base
     </div>
 </div>
 <!-- modulat -->
-<div class="modal fade" id="new_file_Modal" tabindex="-1" role="dialog" aria-labelledby="new_file_ModalLabel" aria-hidden="true">
+<div class="modal" id="new_file_Modal" tabindex="-1" role="dialog" aria-labelledby="new_file_ModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="new_file_ModalLabel">New File</h4>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-            <div class="input-group">
-                    <input type="text" class="form-control fileInput" id="new_file_title" placeholder="file">
-                <div class="input-group-addon">.asm</div>
+        <form>
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="new_file_ModalLabel">New File</h4>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+                <div class="input-group">
+                        <input type="text" class="form-control fileInput" id="new_file_title" placeholder="file">
+                    <div class="input-group-addon">.asm</div>
+                </div>
             </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancle</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" id="new_file">New File</button>
-      </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancle</button>
+            <button type="sumbit" class="btn btn-primary" data-dismiss="modal" id="new_file">New File</button>
+          </div>
+      </form>
     </div>
   </div>
 </div>
+
 
 
 <script data-main="/scripts/main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
