Fixed some typos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ layout: base
         </div>
     </div>
 </div>
-<!-- modulat -->
+<!-- modal -->
 <div class="modal" id="new_file_Modal" tabindex="-1" role="dialog" aria-labelledby="new_file_ModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
