--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ layout: base
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancle</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="sumbit" class="btn btn-primary" data-dismiss="modal" id="new_file">New File </button>
                 </div>
             </form>
