--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@ layout: base
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    <p class="navbar-text warn"><span class="label label-danger">Work In Progress</span></p>
+                </li>
+                <li>
                     <a href="#">
                         <span class="glyphicon glyphicon-question-sign"></span>
                     </a>
@@ -126,10 +129,10 @@ layout: base
 <div class="row">
     <div class="col col-md-7">
         <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active">
+            <li class="active">
                 <a href="#_file_main_asm" aria-controls="home" role="tab" data-toggle="tab">Main.asm</a>
             </li>
-            <li role="presentation">
+            <li>
                 <a href="#_file_package_config" aria-controls="profile" role="tab" data-toggle="tab">Package.config</a>
             </li>
         </ul>
@@ -194,7 +197,7 @@ layout: base
                         <tbody>
                             <tr>
                                 <td>
-                                    <kbd>Shift+F10</kbd>
+                                    <kbd>Ctrl + R</kbd>
                                 </td>
                                 <td>
                                     Run
@@ -230,6 +233,14 @@ layout: base
                                 </td>
                                 <td>
                                     Redo
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <kbd>Ctrl + .</kbd>
+                                </td>
+                                <td>
+                                    Shortcuts
                                 </td>
                             </tr>
                         </tbody>
