Minor cleanup to @acader's changes

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@ layout: base
     <div class="col col-md-7">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#_file_main_asm" role="tab" data-toggle="tab">Main.asm</a>
+                <a href="#_file_main_asm" role="tab" data-toggle="tab">main.asm</a>
             </li>
             <li>
-                <a href="#_file_package_config" role="tab" data-toggle="tab">Package.config</a>
+                <a href="#_file_package_config" role="tab" data-toggle="tab">package.config</a>
             </li>
         </ul>
         <!-- Tab panes -->
