Fix typo in navigation

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: base
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                    Exmaples 
+                    Examaples 
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" role="menu">
