Clean up navigation a bit

--- a/index.html
+++ b/index.html
@@ -119,12 +119,9 @@ layout: base
                         <li>
                             <a href="#" data-toggle="modal" data-target="#shortcut_Modal">Shortcuts</a>
                         </li>
-                        <li>
-                            <a href="#">Something else here</a>
-                        </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">About KnightOS</a>
+                            <a href="http://www.knightos.org">About KnightOS</a>
                         </li>
                     </ul>
                 </li>
@@ -145,12 +142,10 @@ layout: base
         <!-- Tab panes -->
         <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="_file_main_asm">
-                <div class="editor" data-file="main.asm">{% include main.asm %}
-                </div>
+                <div class="editor" data-file="main.asm">{% include main.asm %}</div>
             </div>
             <div role="tabpanel" class="tab-pane" id="_file_package_config">
-                <div class="editor" data-file="package.config">{% include package.config %}
-                </div>
+                <div class="editor" data-file="package.config">{% include package.config %}</div>
             </div>
         </div>
     </div>
