--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: base
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                    Emuator 
+                    Emulator 
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" role="menu">
