--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ layout: base
                     </a>
                     <ul class="dropdown-menu" role="menu">
                         <li>
-                            <a href="#">Settings</a>
+                            <a href="#" data-toggle="modal" data-target="#settings_Modal">Settings</a>
                         </li>
                         <li>
                             <a href="#" data-toggle="modal" data-target="#shortcut_Modal">Shortcuts</a>
@@ -243,6 +243,37 @@ layout: base
                                 <td>
                                     Shortcuts
                                 </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <kbd>Ctrl + ,</kbd>
+                                </td>
+                                <td>
+                                    Settings
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal" id="settings_Modal" tabindex="-1" role="dialog" aria-labelledby="settings_ModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form>
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="shortcut_ModalLabel">Settings <span class="label label-danger">Work In Progress</span></h4>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-condensed table-bordered">
+                        <tbody>
+                            <tr>
+
                             </tr>
                         </tbody>
                     </table>
