--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ layout: base
                     </a>
                     <ul class="dropdown-menu" role="menu">
                         <li>
-                            <a href="#" data-toggle="modal" data-target="#settings_Modal">Settings</a>
+                            <a href="#" data-toggle="modal" id="settings">Settings</a>
                         </li>
                         <li>
                             <a href="#" data-toggle="modal" data-target="#shortcut_Modal">Shortcuts</a>
