Converted settings '.click' to '.on'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: base
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">Export files</a>
+                            <a href="#" id="export">Export files</a>
                         </li>
                     </ul>
                 </li>
